iOS gap fix undo

--- a/app/styles/sass/partials/_base.scss
+++ b/app/styles/sass/partials/_base.scss
@@ -445,7 +445,7 @@ input:focus {
 }
 
 swiper {
-  position:absolute;
+  position:fixed;
   top:0;
   right:0;
   bottom:0;
